--- a/wp-content/themes/twentythirteen/css/psp.css
+++ b/wp-content/themes/twentythirteen/css/psp.css
@@ -72,7 +72,7 @@ ul.nav-menu ul a:hover, .nav-menu ul ul a:hover {background:#5476a4; color:#fff;
 
 /* CONTACT */
 .wpcf7-form input, .wpcf7-form textarea {border:2px solid #00335b;}
-.wpcf7-submit {margin-top:10px; color:#fff; background:#00335b;}
+.wpcf7-form input.wpcf7-submit {margin-top:10px; color:#fff; background:#00335b;}
 
 
 
