--- a/wp-content/themes/twentythirteen/css/psp.css
+++ b/wp-content/themes/twentythirteen/css/psp.css
@@ -28,8 +28,8 @@ ul.nav-menu ul a:hover, .nav-menu ul ul a:hover {background:#5476a4; color:#fff;
 /* HOMEPAGE */
 #top-banner-container {position:relative; width:100%; min-height:400px; background:#5574a2;}
 #hp-slideshow-container {position:relative; float:left; width:450px; height:350px; margin-top:25px; margin-left:25px; background:#fff; border:2px solid #00335b; }
-#hp-top-content {position:relative; float:left; width:450px; margin-left:25px; color:#fff; text-align:center; margin-top:50px; font-family:'Afta sans'; font-size:24px; 
-	line-height:40px; font-weight:bold;}
+#hp-top-content {position:relative; float:left; width:450px; margin-left:25px; color:#fff; text-align:center; margin-top:50px; font-family:'Afta sans'; font-size:22px; 
+	line-height:40px; font-weight:bold; letter-spacing:2px;}
 #top-banner-container .slideshow-nav, #top-banner-container .pscarousel {display:none;}
 #top-banner-container .slideshow-content a {width:100%;}
 #top-banner-container .slideshow-content img, #top-banner-container .slideshow-wrapper {max-width:396px; max-height:346px;}
@@ -38,7 +38,7 @@ ul.nav-menu ul a:hover, .nav-menu ul ul a:hover {background:#5476a4; color:#fff;
 #hp-divider {position:relative; margin-top:25px; margin-bottom:25px; text-align:center; width:100%;}
 #hp-divider img {width:90%;}
 
-#hp-bottom-content {position:relative; width:80%; margin-left:10%; text-align:center; font-size:18px; font-family:'Afta sans'; color:#00335b;}
+#hp-bottom-content {position:relative; width:80%; margin-left:10%; text-align:center; font-size:18px; font-family:'Afta sans'; color:#00335b; letter-spacing:2px;}
 
 #secondary {display:none;}
 
