--- a/wp-content/themes/twentythirteen/css/psp-print.css
+++ b/wp-content/themes/twentythirteen/css/psp-print.css
@@ -1,3 +1,3 @@
-header, #page, .overlay-border, .close-overlay {display:none;}
+header, #page, .overlay-border, .close-overlay, .print-overlay {display:none;}
 .service-overlay {left:0px !important; width:672px; height:100%;}
 .overlay-content {height:100%;}
