--- a/wp-content/themes/twentythirteen/css/psp.css
+++ b/wp-content/themes/twentythirteen/css/psp.css
@@ -117,8 +117,8 @@ ul.nav-menu ul a:hover, .nav-menu ul ul a:hover {background:#5476a4; color:#fff;
 .serv-title-cont {position:relative; float:left; width:300px; padding:10px; min-height:75px;}
 .serv-title {position:relative; float:left; width:100%; text-align:center; font-size:14px; font-weight:bold;}
 .serv-excerpt {position:relative; float:left; width:80%; margin-left:10%; font-size:12px; margin-top:25px; text-align:center; min-height:100px;}
-.serv-title a {text-decoration:none; color:#5476A4;}
-.serv-title a:hover {text-decoration:underline; color:#00335b;}
+.serv-title span {text-decoration:none; color:#5476A4; cursor:pointer;}
+.serv-title span:hover {text-decoration:underline; color:#00335b;}
 .view-more-button {position:relative; margin:auto; width:200px; height:40px; padding-top:7px; background:#00335b; color:#fff;
 	text-transform:uppercase; text-decoration:none; cursor:pointer;}
 .view-more-button:hover {background:#5476a4;}
@@ -158,8 +158,8 @@ select.ninja-forms-field option {border:1px solid #E1ECFC;}
 .about-cont {font-size:14px; font-weight:normal;}
 
 
-
-/*.close-overlay {position:absolute; top:15px; right:15px; width:15px; cursor:pointer; z-index:500;}
+/* SERVICE OVERLAYS */
+.close-overlay {position:absolute; top:15px; right:15px; width:15px; cursor:pointer; z-index:500;}
 
 .service-overlay {position:fixed; width:700px; height:475px; padding:5px; display:none; background:#fff; z-index:1000; border:3px solid #00335b;}
 .overlay-border {position:absolute; width:685px; border:2px solid #5476a4; height:98%;}
@@ -168,11 +168,10 @@ select.ninja-forms-field option {border:1px solid #E1ECFC;}
 .overlay-title {position:relative; float:left; width:100%; text-align:center; margin-top:15px; font-size:18px; font-weight:bold; margin-bottom:10px;}
 .overlay-divider {position:relative; float:left; width:100%; text-align:center;}
 .overlay-divider img {width:90%;}
-.overlay-content {position:relative; float:left; width:620px; height:300px; margin-left:25px; margin-top:20px; padding-bottom:50px; text-align:center;
+.overlay-content {position:relative; float:left; width:620px; height:290px; margin-left:25px; margin-top:10px; padding-bottom:50px; text-align:center;
 	overflow-y:auto;}
-
-.print-overlay {position:absolute; top:15px; left:15px; width:50px; height:20px; font-size:12px; color:#fff; background:#00335b; text-align:center; cursor:pointer; z-index:500;}
-.print-overlay:hover {background:#5476a4;}*/
+.print-service {width:300px; height:20px; position:relative; margin:auto; font-size:13px;}
+.print-service-link {position:relative; float:left; width:100%; text-align:center; margin-top:10px;}
 
 
 
