update to form css

--- a/wp-content/themes/twentythirteen/css/psp.css
+++ b/wp-content/themes/twentythirteen/css/psp.css
@@ -64,25 +64,6 @@ ul.nav-menu ul a:hover, .nav-menu ul ul a:hover {background:#5476a4; color:#fff;
 #hp-contact-button {position:relative; margin:auto; width:200px; height:60px; color:#fff; background:#5476a4; padding-top:15px; margin-top:15px; font-size:18px;}
 #hp-contact-button:hover {background:#a7bbb0; color:#00335b;}
 
-/* FORMS */
-.form-field-title {font-weight:bold; font-size:18px; margin-top:50px;}
-.ninja-forms-form-wrap h2 {text-transform:uppercase;}
-.ninja-forms-form label {font-weight:bold;}
-.ninja-forms-all-fields-wrap .textarea-wrap.ninja-subquestion-wrap {margin-top:0px;}
-.ninja-forms-all-fields-wrap .ninja-subquestion-wrap label {font-weight:normal;}
-.ninja-forms-all-fields-wrap .ninja-forms-field p {margin-bottom:0px;}
-.ninja-forms-all-fields-wrap .text-wrap {margin-top:25px; margin-right:25px; width:275px; float:left;}
-.ninja-forms-all-fields-wrap .spam-wrap {margin-top:25px; width:100%; float:left;}
-.ninja-forms-all-fields-wrap .textarea-wrap, .ninja-forms-all-fields-wrap .form-field-title {float:left; width:100%; margin-top:25px;}
-.ninja-forms-all-fields-wrap textarea, .ninja-forms-all-fields-wrap input, select.ninja-forms-field {border:2px solid #e1ecfc; background:#ebf0f8;}
-.ninja-forms-all-fields-wrap textarea:focus, .ninja-forms-all-fields-wrap input:focus {background:#fff;}
-.ninja-forms-all-fields-wrap .ninjap-submit-button-wrap, .ninjap-submit-button-wrap {float:left;}
-.ninja-forms-form .ninja-forms-all-fields-wrap .ninja-submit-button-wrap input.ninja-submit-button {margin-left:0px !important; margin-top:20px; color:#fff; background:#00335b;}
-.ninja-forms-form .ninja-forms-all-fields-wrap .ninja-submit-button-wrap input.ninja-submit-button:hover {background:#5476a4;}
-.ninja-subtitle {float:left; width:100%; margin-top:0px; font-weight:bold; font-size:16px;}
-.ninja-forms-all-fields-wrap .ninja-subtitle-wrap {margin-top:0px;}
-.ninja-forms-field-error, .ninja-forms-success-msg {color:#DF0101; font-weight:bold; position:absolute;}
-.ninja-forms-success-msg {position:absolute; bottom:20px; text-transform:uppercase; font-size:18px;}
 
 /* CONTACT */
 .page-template-contact-php #primary article {padding-top:10px;}
@@ -140,15 +121,39 @@ ul.nav-menu ul a:hover, .nav-menu ul ul a:hover {background:#5476a4; color:#fff;
 .forms-page .prof-serv-cont {min-height:250px;}
 .forms-page .prof-serv-cont .service-list-container {height:250px;}
 .checkbox-wrap, .list-multi-wrap {min-height:250px; float:left;}
-.ninja-forms-all-fields-wrap .list-checkbox-wrap {min-height:50px; float:left; border:1px solid #000; margin-bottom:0px;}
-.ninja-forms-all-fields-wrap .list-checkbox-wrap ul li {border:1px solid #CCCCCC;}
+.ninja-forms-all-fields-wrap .list-checkbox-wrap {min-height:50px; float:left; border:1px solid #000; margin-bottom:0px; width:100%;}
+.ninja-forms-all-fields-wrap .list-checkbox-wrap ul {padding:0px; position:relative; float:left; margin:10px 0px;}
+.ninja-forms-all-fields-wrap .list-checkbox-wrap ul li {border:1px solid #CCCCCC;list-style-type: none; position:relative; float:left; padding-right:5px;}
 .checkbox-wrap label, .list-multi-wrap label, .ninja-forms-all-fields-wrap .list-checkbox-wrap label, .list-checkbox-wrap input {font-weight:normal;}
-.ninja-forms-all-fields-wrap .list-checkbox-wrap label {text-decoration:none;}
-.ninja-forms-all-fields-wrap .list-checkbox-wrap ul li label {text-decoration:none;}
+.ninja-forms-all-fields-wrap .list-checkbox-wrap label {text-decoration:none; position:relative; float:left; width:99%; margin-left:1%; font-weight:bold;}
+.ninja-forms-all-fields-wrap .list-checkbox-wrap ul li label {text-decoration:none; width:100%;}
+.ninja-forms-all-fields-wrap .list-checkbox-wrap span ul li input {width:20px;}
+.ninja-forms-all-fields-wrap .list-checkbox-wrap span ul li label {font-weight:normal;}
 select.ninja-forms-field option {border:1px solid #E1ECFC;}
-.ninja-forms-form-wrap .ninja-forms-form .ninja-forms-all-fields-wrap .ninja-dev-field-wrap span ul li {padding-left:2px !important; padding-right:4px !important;}
-.ninja-forms-form-wrap .ninja-forms-form .ninja-forms-all-fields-wrap .ninja-dev-field-wrap .ninja-dev-field {margin-left:0px !important; margin-right:2px !important;}
+.ninja-forms-form-wrap .ninja-forms-form .ninja-forms-all-fields-wrap .ninja-dev-field-wrap span ul li {padding-left:0px !important; padding-right:2px !important;}
+.ninja-forms-form-wrap .ninja-forms-form .ninja-forms-all-fields-wrap .ninja-dev-field-wrap .ninja-dev-field {margin-left:0px !important; margin-right:0px !important; width:18px;}
 .ninja-forms-form-wrap .ninja-forms-form .ninja-forms-all-fields-wrap .wp_themeSkin iframe {background:#E1ECFC;}
+.form-field-title {font-weight:bold; font-size:18px; margin-top:50px;}
+.ninja-forms-form-wrap h2 {text-transform:uppercase;}
+.ninja-forms-form label {font-weight:bold;}
+.ninja-forms-all-fields-wrap .textarea-wrap.ninja-subquestion-wrap {margin-top:0px;}
+.ninja-forms-all-fields-wrap .ninja-subquestion-wrap label {font-weight:normal;}
+.ninja-forms-all-fields-wrap .ninja-forms-field p {margin-bottom:0px;}
+.ninja-forms-all-fields-wrap .text-wrap {margin-top:25px; margin-right:25px; width:275px; float:left;}
+.ninja-forms-all-fields-wrap .spam-wrap, .ninja-forms-all-fields-wrap .ninja-submit-button-wrap {margin-top:25px; width:100%; float:left;}
+.ninja-forms-all-fields-wrap .textarea-wrap, .ninja-forms-all-fields-wrap .form-field-title {float:left; width:100%; margin-top:25px;}
+.ninja-forms-all-fields-wrap textarea, .ninja-forms-all-fields-wrap input, select.ninja-forms-field {border:2px solid #e1ecfc; background:#ebf0f8; }
+.ninja-forms-all-fields-wrap .ninja-field-wrap input {width:300px;}
+.ninja-forms-all-fields-wrap textarea:focus, .ninja-forms-all-fields-wrap input:focus {background:#fff;}
+.ninja-forms-all-fields-wrap .ninjap-submit-button-wrap, .ninjap-submit-button-wrap {float:left;}
+.ninja-forms-form .ninja-forms-all-fields-wrap .ninja-submit-button-wrap input.ninja-submit-button {margin-left:0px !important; margin-top:20px; color:#fff; background:#00335b;}
+.ninja-forms-form .ninja-forms-all-fields-wrap .ninja-submit-button-wrap input.ninja-submit-button:hover {background:#5476a4;}
+.ninja-subtitle {float:left; width:100%; margin-top:0px; font-weight:bold; font-size:16px;}
+.ninja-forms-all-fields-wrap .ninja-subtitle-wrap {margin-top:0px;}
+.ninja-forms-field-error, .ninja-forms-success-msg {color:#DF0101; font-weight:bold; position:absolute;}
+.ninja-forms-success-msg {position:absolute; bottom:20px; text-transform:uppercase; font-size:18px;}
+.ninja-forms-form  textarea.ninja-field, .ninja-forms-form  textarea.ninja-subquestion {width:100%;}
+
 
 /* ABOUT */
 .about-container {position:relative; width:100%;}
