--- a/wp-content/themes/twentythirteen/css/psp.css
+++ b/wp-content/themes/twentythirteen/css/psp.css
@@ -194,7 +194,7 @@ select.ninja-forms-field option {border:1px solid #E1ECFC;}
 .flexible-frontend-login {position:absolute; top:10px; right:50px; z-index:1000;}
 .ffl-popup-content {z-index:1000;}
 .ffl-close-popup-link {cursor:pointer;}
-#ffl-logged-in-user a, a#ffl-logout-link {color:#fff;}
+#ffl-logged-in-user a, a#ffl-logout-link, a.ffl-popup-link {color:#fff;}
 #ffl-logged-in-user a:hover, a#ffl-logout-link:hover {color:#CA3C08;}
 
 /* Profile */
